--- a/style.css
+++ b/style.css
@@ -73,15 +73,20 @@
     padding: 12px;
     border-radius: 6px;
     display: flex;
-    justify-content: space-between;
     align-items: center;
+    gap: 10px;
   }
   
-  li.completed {
+  li.completed span {
     text-decoration: line-through;
     color: #888;
-    background: #e6f7e6;
   }
+  
+  li input[type="checkbox"] {
+    transform: scale(1.2);
+    cursor: pointer;
+  }
+  
   
   .removeBtn {
     background: crimson;
@@ -95,4 +100,5 @@
   .removeBtn:hover {
     background: darkred;
   }
-  
+
+
